schema/testdata/errors/jobs_permission_attribute_expression_invalid_args.keel
job MyJob1 {
    //expect-error:29:38:AttributeExpressionError:unknown identifier 'something'
    @permission(expression: something > 5)
}

job MyJob2 {
    //expect-error:29:35:AttributeExpressionError:unknown identifier 'myJob3'
    @permission(expression: myJob3.id == true)
}

job MyJob3 {
    //expect-error:29:38:AttributeExpressionError:expression expected to resolve to type Boolean but it is Text
    @permission(expression: "invalid")
}

job MyJob4 {
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    //expect-error:17:36:AttributeArgumentError:unexpected argument for @permission
    @permission(ctx.isAuthenticated)
}

job MyJob5 {
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    //expect-error:17:21:AttributeArgumentError:unexpected argument 'expr' for @permission
    @permission(expr: ctx.isAuthenticated)
}

job MyJob6 {
    //expect-error:29:30:AttributeExpressionError:unknown identifier 'c'
    @permission(expression: c.isAuthenticated)
}

job MyJob7 {
    //expect-error:48:49:AttributeExpressionError:type Boolean does not have any fields to select
    //expect-error:76:82:AttributeExpressionError:unknown identifier 'person'
    @permission(expression: ctx.isAuthenticated.invalid && ctx.identity in person.organisation.invalid)
}

role Admin {
}

role Developer {
}
